# ddns-client

./: pyproject.toml
ddns/: cli.py
