[tool.poetry]
name = "ddns-client"
version = "0.1.0"
description = ""
authors = ["Tomoyuki Tanigaki <68139726+ttani03@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ddns"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
dnspython = "^2.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.10.1"
pytest = "^7.2.0"

[tool.poetry.scripts]
ddns = "ddns.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
